Fix collapse menu alignment

--- a/resources/css/humhub.wiki.less
+++ b/resources/css/humhub.wiki.less
@@ -247,13 +247,18 @@
     }
 
     .wiki-collapse-menu.collapsed {
-      display: flex;
+      display: flex !important;
       flex-wrap: wrap;
       justify-content: center;
       flex-direction: column;
 
+      button:first-child {
+        margin-top:0;
+      }
+
       .btn {
         margin:5px;
+        width:30px;
       }
     }
   }
@@ -274,7 +279,6 @@
 
     .fa-link {
       color: #7880dd;
-      margin-right:4px;
     }
 
     .edit {
